  by meld3, was not enabled by default, and did not support all meld3
  features.  The pure Python version has very acceptable performance.

  The license has been changed from ZPL 2.1 to the BSD-derived Repoze
  license, which is the same license used by Supervisor.

  Profiling scripts that had been used early in meld3 development have
  been removed.

  Installation now requires setuptools.  For Python versions before 2.5,
  elementtree is now a requirement for installation.  The test suite
  can now be run with ``python setup.py test``.

  Added compatibility with Python 3.2 and 3.3.  Thanks to Scott Maxwell
  and Tres Seaver for contributing the patches.

0.6.10 (2012-11-27)
-------------------

  Fixed a bug where an exception could be raised when escaping certain
  attribute or cdata values.  This was caused by meld3 trying to use
  _encode_entity from xml.etree without importing it first.  Thanks to
  Jorge Puente Sarrin for contributing the patch.

0.6.9 (2012-09-12)
------------------

  Fixed a test failure that only occurred on some builds of
  Python 2.7 where parsing an unknown entity could raise
  an expat.error instead of SyntaxError.

0.6.8 (2012-01-12)
------------------

  Added the C extension source (cmeld3.c) to the release package
  by including it in MANIFEST.in.  Thanks to Soren Hansen for
  noticing it was missing from prior releases.

  Running setup.py will now halt on error if a compatible version
  of Python is not detected.

0.6.7 (2010-08-04)
------------------

  Make compatible with Python 2.7 (patch kindly contributed by
  Jonathan Riboux).

0.6.6 (2009-09-30)
------------------

  Change download location.  This really should be a setuptools
  package so we can upload it to PyPI.  No functionality changes.

0.6.5 (2008-07-21)
------------------

  Apply patch for Python 2.5 compatibility from both
  Toshio and Anders.

  Create distro tarball via:

   rm MANIFEST
   USE_MELD3_EXTENSION_MODULES=1 python setup.py sdist
